# improve-reasoning-iclr-2025

./: .gitignore  LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt
src/: __init__.py
src/project/: evaluate.py  get_gsm.py  get_gsm_pairs.py  train.py  visualization.ipynb
src/project/configs/: config.yaml
src/project/configs/experiment/: experiment1.yaml  experiment2.yaml
